data/derived/comb/progs/unify/prog1519.ml.out
Characters 16-23:
  let _ = concat ["1","2"];;
                  ^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type string
